--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,62 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+
+<div class="main">
+    <div class="chat">
+        <div class="toukou">
+            <div>
+                <div class="textzone">
+                    <p class="name">oyama<span> 2020/08/11</span></p>
+                    <p class="toukou">HTMLむずかしいよう</p>
+                </div>
+
+                <div class="buttons">
+                    <ul>
+                        <li><a href="#">edit</a></li>
+                        <li><a href="#">delete</a></li>
+                    </ul>
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="toukou">
+            <div>
+                <div class="textzone">
+                    <p class="name">oyama<span> 2020/08/12</span></p>
+                    <p class="toukou">CSSむずかしいよう</p>
+                </div>
+
+                <div class="buttons">
+                    <ul>
+                        <li><a href="#">edit</a></li>
+                        <li><a href="#">delete</a></li>
+                    </ul>
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="toukou">
+            <div>
+                <div class="textzone">
+                    <p class="name">oyama<span> 2020/08/13</span></p>
+                    <p class="toukou">HTMLむずかしいよう</p>
+                </div>
+
+                <div class="buttons">
+                    <ul>
+                        <li><a href="#">edit</a></li>
+                        <li><a href="#">delete</a></li>
+                    </ul>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+    <div class="chat-form">
+        <form>
+        <input type="text" class="toukoumae">
+        <input type="submit" value="SEND" class="send-button">
+        
+
+    </div>
+</div>
