--- a/app/views/messages/index.html
+++ b/app/views/messages/index.html
@@ -1,1 +1,29 @@
-<h1>おたんこなす！</h1>
+<div class="main">
+    <div class="chat">
+        <div class="chatflow">
+            <div class="message">
+                <div>
+                    <p>ユーザー名<span>投稿日時</span></p>
+                    <p>本文</p>
+                    <div>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="chat-form">
+
+        <div class="aaa"><p>本文</p></div>
+        <form>
+            <input type="text">
+            <input class="bbb" type="submit" value="SEND">
+        
+
+
+
+    </div>
+</div>
