--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,3 +1,118 @@
-// Place all the styles related to the messages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "./color";
+
+.main {
+    height: calc(100vh - 160px);  // vhは「viewport height」の略で、viewport の高さ（ブラウザの高さ）に対する指定です。100vhで表示しているスマホやPCのウィンドウサイズの100%という意味になります 
+    width: 100%;
+    margin: 0; 
+    padding: 0;
+    .chat {
+        
+        padding: 0 20px;
+        height: calc(100vh - 240px);
+        background-color: #525252;
+        
+        
+
+        .toukou {
+            
+            
+            max-height: calc(100vh - 170px);
+            margin-bottom: 5px;
+            overflow-y: auto;
+            background-color:#414141
+            
+        }
+
+       .textzone {
+           float:left
+           
+       }
+       
+       
+        
+      
+
+       p {
+        color: white;
+         }
+
+       .name {
+           font-weight: bold; 
+           padding: 10px 0px 0px 10px;   
+        }
+
+       .toukou {
+        padding: 10px 0px 0px 10px;
+       }
+
+       .buttons {
+        margin-right:20px;
+        float:right
+        
+        
+       }
+
+
+        ul {
+            list-style: none;
+            li {
+                background-color: #f0e68c;
+                border-radius: 5px;
+               
+                 
+                a {
+                    padding: .3em 3em;
+                    margin: 10px  5px ;
+                    color: black;
+                    font-weight: bold;
+                    text-decoration: none;
+                    
+                    display: block;
+                }
+                &:hover {
+                    opacity: 0.7;
+                }
+            }
+        }
+
+
+        .message {
+            background-color: #b22222
+            
+        }
+        
+    }
+    
+    .chat-form {
+        height: 80px;
+        padding: 15px;
+        background-color: #313131;
+
+        .toukoumae {
+            height: 50px;
+            width: 80%;
+            border-radius: 3px;
+            vertical-align: middle;
+        }
+
+        .send-button {
+                background-color: gold;
+                border-radius: 5px;
+                margin-left: 1em;
+                height: 50px;
+                width: 100px;
+                
+                a {
+                    padding: .7em 2em;
+                    color: $main-color;
+                    font-weight: bold;
+                    text-decoration: none;
+                    width: 100%;
+                    display: block;
+                }
+                &:hover {
+                    opacity: 0.7;
+                }
+        }
+    }
+}
